[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fish/Behaviours/WallSensors/WallSensors.gd" type="Script" id=1]

[node name="WallSensors" type="Node2D"]
script = ExtResource( 1 )

[node name="UpRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="DownRaycast" type="RayCast2D" parent="."]
enabled = true

[node name="LeftRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="RightRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
